# plugah

./: .coverage 2  .env.example  .gitignore  .pre-commit-config.yaml  .pypirc.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  SECURITY.md  example_usage.py  fix_unions.py  pyproject.toml  test_api.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  change_request.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: mvp-voice-demo.md
examples/: .env.example  seed_slack.py  slack_summarizer_quickstart.md
plugah/: __init__.py  audit.py  audit.py.bak  boardroom.py  boardroom.py.bak  budget.py  cache.py  cache.py.bak  executor.py  executor.py.bak  llm.py  llm_client.py  materialize.py  materialize.py.bak  metrics.py  oag_schema.py  oag_schema.py.bak  orchestrator.py  patches.py  patches.py.bak  planner.py  registry.py  selector.py  selector.py.bak  templates.py  types.py
plugah/adapters/: __init__.py  base.py  gdrive_docs.py  github_issues.py
plugah/contrib/: __init__.py
plugah/contrib/http/: __init__.py  app.py
plugah/core/: __init__.py  boardroom.py  discovery.py  events.py  models.py  planner.py  prd.py  runner.py
plugah/demo/: demo_cli.py
plugah/tools/: __init__.py  code.py  data.py  qa.py  research.py  write.py
tests/: test_budget.py  test_core_planner.py  test_events.py  test_http_sse.py  test_llm_client.py  test_oag_contracts.py  test_planner.py  test_prd_md.py  test_smoke.py  test_tools.py
web/backend/: deps.py  main.py  routes_run.py  routes_startup.py  routes_status.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: BudgetPanel.tsx  OKRPanel.tsx  OrgChart.tsx  PromptForm.tsx  RunLog.tsx  StartupQA.tsx
