[project]
name = "plugah"
version = "0.1.0"
description = "Multi-agent orchestration system with organizational hierarchy"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Plugah Team", email = "hello@plugah.ai" }
]
maintainers = [
    { name = "Aaron", email = "aaron@plugah.ai" }
]
keywords = ["ai", "agents", "orchestration", "crewai", "automation", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "crewai>=0.1.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "networkx>=3.0",
    "jsonpatch>=1.33",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/cheesejaguar/plugah"
Documentation = "https://github.com/cheesejaguar/plugah#readme"
Repository = "https://github.com/cheesejaguar/plugah.git"
Issues = "https://github.com/cheesejaguar/plugah/issues"
Changelog = "https://github.com/cheesejaguar/plugah/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
demo = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
plugah-demo = "plugah.demo.demo_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plugah"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C90", "RUF"]
ignore = ["E501", "B008", "C901"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=plugah --cov-report=term-missing"